# pycli-template

./: .gitignore  README.md  copier.yml  pyproject.toml  smoke_test.sh
template/: .gitignore  .python-version  AGENTS.md  Makefile  README.md  ctx.yaml  pyproject.toml
template/scripts/: install_ctx.sh
template/tests/: test_cli.py
template/{{ package_name }}/: cli.py
