[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[project]
name = "{{ project_name }}"
version = "0.1.0"
description = "{{ description }}"
readme = "README.md"
requires-python = ">={{ min_python }}"
license = "{{ license }}"
authors = [
  { name = "{{ author_name }}", email = "{{ author_email }}" }
]
dependencies = []

[project.scripts]
{{ cli_name }} = "{{ package_name }}.cli:main"

[project.urls]
Repository = "https://github.com/{{ repo_slug }}"

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "build",
]

[tool.hatch.build.targets.wheel]
packages = ["{{ package_name }}"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".uv-cache", ".venv"]

[tool.mypy]
python_version = "{{ min_python }}"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
cache-dir = "./.uv-cache"
